Xors3dIndie(withSamples)_750/headers/CPP/inc/xors3d.h

// Object handle typedef
typedef int Handle;
X3DDECL float X3DCALL xLine3DNodeX(Handle line3d, int index, bool isGlobal = false);
X3DDECL float X3DCALL xLine3DNodeY(Handle line3d, int index, bool isGlobal = false);
X3DDECL float X3DCALL xLine3DNodeZ(Handle line3d, int index, bool isGlobal = false);
X3DDECL int X3DCALL xLine3DRed(Handle line3d);
X3DDECL int X3DCALL xLine3DGreen(Handle line3d);
X3DDECL int X3DCALL xLine3DBlue(Handle line3d);
X3DDECL int X3DCALL xLine3DAlpha(Handle line3d);
X3DDECL int X3DCALL xGetLine3DUseZBuffer(Handle line3d);
X3DDECL void X3DCALL xDeleteLine3DNode(Handle line3d, int index);
X3DDECL void X3DCALL xClearLine3D(Handle line3d);
// brushes commands
X3DDECL Handle X3DCALL xLoadBrush(const char * path, int flags = 9, float xScale = 1.0f, float yScale = 1.0f);
X3DDECL Handle X3DCALL xCreateBrush(float red = 255.0f, float green = 255.0f, float blue = 255.0f);
X3DDECL void X3DCALL xFreeBrush(Handle brush);
X3DDECL Handle X3DCALL xGetBrushTexture(Handle brush, int index = 0);
X3DDECL void X3DCALL xBrushColor(Handle brush, int red, int green, int blue);
X3DDECL void X3DCALL xBrushAlpha(Handle brush, float alpha);
X3DDECL void X3DCALL xBrushShininess(Handle brush, float shininess);
X3DDECL void X3DCALL xBrushBlend(Handle brush, int blend);
X3DDECL void X3DCALL xBrushFX(Handle brush, int FX);
X3DDECL void X3DCALL xBrushTexture(Handle brush, Handle texture, int frame = 0, int index = 0);
X3DDECL const char * X3DCALL xGetBrushName(Handle brush);
X3DDECL void X3DCALL xBrushName(Handle brush, const char * name);
X3DDECL float X3DCALL xGetBrushAlpha(Handle brush);
X3DDECL int X3DCALL xGetBrushBlend(Handle brush);
X3DDECL int X3DCALL xGetBrushRed(Handle brush);
X3DDECL int X3DCALL xGetBrushGreen(Handle brush);
X3DDECL int X3DCALL xGetBrushBlue(Handle brush);
X3DDECL int X3DCALL xGetBrushFX(Handle brush);
X3DDECL float X3DCALL xGetBrushShininess(Handle brush);
// cameras commands
X3DDECL void X3DCALL xCameraFogMode(Handle camera, int mode);
X3DDECL void X3DCALL xCameraFogColor(Handle camera, int red, int green, int blue);
X3DDECL void X3DCALL xCameraFogRange(Handle camera, float nearRange, float farRange);
X3DDECL void X3DCALL xCameraClsColor(Handle camera, int red, int green, int blue, int alpha = 255);
X3DDECL void X3DCALL xCameraProjMode(Handle camera, int mode);
X3DDECL void X3DCALL xCameraClsMode(Handle camera, int clearColor, int clearZBuffer);
X3DDECL int X3DCALL xSphereInFrustum(Handle camera, float x, float y, float z, float radii);
X3DDECL void X3DCALL xCameraClipPlane(Handle camera, int index, bool enabled, float a, float b, float c, float d);
X3DDECL void X3DCALL xCameraRange(Handle camera, float nearRange, float farRange);
X3DDECL void X3DCALL xCameraViewport(Handle camera, int x, int y, int width, int height);
X3DDECL void X3DCALL xCameraCropViewport(Handle camera, int x, int y, int width, int height);
X3DDECL Handle X3DCALL xCreateCamera(Handle parent = NULL);
X3DDECL void X3DCALL xCameraProject(Handle camera, float x, float y, float z);
X3DDECL void X3DCALL xCameraProject2D(Handle camera, int x, int y, float zDistance);
X3DDECL float X3DCALL xProjectedX();
X3DDECL float X3DCALL xProjectedY();
X3DDECL float X3DCALL xProjectedZ();
X3DDECL Handle X3DCALL xGetViewMatrix(Handle camera);
X3DDECL Handle X3DCALL xGetProjectionMatrix(Handle camera);
X3DDECL void X3DCALL xCameraZoom(Handle camera, float zoom);
X3DDECL Handle X3DCALL xGetViewProjMatrix(Handle camera);
// collisions commands
X3DDECL void X3DCALL xCollisions(int srcType, int destType, int collideMethod, int response);
X3DDECL void X3DCALL xClearCollisions();
X3DDECL void X3DCALL xResetEntity(Handle entity);
X3DDECL void X3DCALL xEntityRadius(Handle entity, float xRadius, float yRadius = 0.0f);
X3DDECL void X3DCALL xEntityBox(Handle entity, float x, float y, float z, float width, float height, float depth);
X3DDECL void X3DCALL xEntityType(Handle entity, int typeID, bool recurse = false);
X3DDECL Handle X3DCALL xEntityCollided(Handle entity, int typeID);
X3DDECL int X3DCALL xCountCollisions(Handle entity);
X3DDECL float X3DCALL xCollisionX(Handle entity, int index);
X3DDECL float X3DCALL xCollisionY(Handle entity, int index);
X3DDECL float X3DCALL xCollisionZ(Handle entity, int index);
X3DDECL float X3DCALL xCollisionNX(Handle entity, int index);
X3DDECL float X3DCALL xCollisionNY(Handle entity, int index);
X3DDECL float X3DCALL xCollisionNZ(Handle entity, int index);
X3DDECL float X3DCALL xCollisionTime(Handle entity, int index);
X3DDECL Handle X3DCALL xCollisionEntity(Handle entity, int index);
X3DDECL Handle X3DCALL xCollisionSurface(Handle entity, int index);
X3DDECL int X3DCALL xCollisionTriangle(Handle entity, int index);
X3DDECL int X3DCALL xGetEntityType(Handle entity);
// constants commands
X3DDECL void X3DCALL xRenderPostEffect(Handle poly);
X3DDECL Handle X3DCALL xCreatePostEffectPoly(Handle camera, int mode);
X3DDECL Handle X3DCALL xGetFunctionAddress(const char * name);
// effects commands
X3DDECL Handle X3DCALL xLoadFXFile(const char * path);
X3DDECL void X3DCALL xFreeEffect(Handle effect);
X3DDECL void X3DCALL xSetEntityEffect(Handle entity, Handle effect, int index = -1);