Xors3dIndie(withSamples)_750/headers/C#/xors3d.cs


	public static void Line3DNodePosition(int line3d, int index, float x, float y, float z)
	{
		 Line3DNodePosition(line3d, index, x, y, z, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DNodeX")]
	public static extern float Line3DNodeX(int line3d, int index, bool isGlobal);

	public static float Line3DNodeX(int line3d, int index)
	{
		return Line3DNodeX(line3d, index, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DNodeY")]
	public static extern float Line3DNodeY(int line3d, int index, bool isGlobal);

	public static float Line3DNodeY(int line3d, int index)
	{
		return Line3DNodeY(line3d, index, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DNodeZ")]
	public static extern float Line3DNodeZ(int line3d, int index, bool isGlobal);

	public static float Line3DNodeZ(int line3d, int index)
	{
		return Line3DNodeZ(line3d, index, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xLine3DRed")]
	public static extern int Line3DRed(int line3d);

	[DllImport("xors3d.dll", EntryPoint = "xLine3DGreen")]
	public static extern int Line3DGreen(int line3d);

	[DllImport("xors3d.dll", EntryPoint = "xLine3DBlue")]
	public static extern int Line3DBlue(int line3d);

	[DllImport("xors3d.dll", EntryPoint = "xLine3DAlpha")]
	public static extern int Line3DAlpha(int line3d);

	[DllImport("xors3d.dll", EntryPoint = "xGetLine3DUseZBuffer")]
	public static extern int GetLine3DUseZBuffer(int line3d);

	[DllImport("xors3d.dll", EntryPoint = "xDeleteLine3DNode")]
	public static extern void DeleteLine3DNode(int line3d, int index);

	[DllImport("xors3d.dll", EntryPoint = "xClearLine3D")]
	public static extern void ClearLine3D(int line3d);


	// brushes commands
	[DllImport("xors3d.dll", EntryPoint = "xLoadBrush")]
	public static extern int LoadBrush_(StringBuilder path, int flags, float xScale, float yScale);
	public static int LoadBrush(string path, int flags, float xScale, float yScale)
	{
		return LoadBrush_(new StringBuilder(path), flags, xScale, yScale);
	}
	public static int LoadBrush(string path, int flags, float xScale)
	{
		return LoadBrush(path, flags, xScale, 1.0f);
	}
	public static int LoadBrush(string path, int flags)
	{
		return LoadBrush(path, flags, 1.0f, 1.0f);
	}
	public static int LoadBrush(string path)
	{
		return LoadBrush(path, 9, 1.0f, 1.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xCreateBrush")]
	public static extern int CreateBrush(float red, float green, float blue);

	public static int CreateBrush(float red, float green)
	{
		return CreateBrush(red, green, 255.0f);
	}
	public static int CreateBrush(float red)
	{
		return CreateBrush(red, 255.0f, 255.0f);
	}
	public static int CreateBrush()
	{
		return CreateBrush(255.0f, 255.0f, 255.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xFreeBrush")]
	public static extern void FreeBrush(int brush);

	[DllImport("xors3d.dll", EntryPoint = "xGetBrushTexture")]
	public static extern int GetBrushTexture(int brush, int index);

	public static int GetBrushTexture(int brush)
	{
		return GetBrushTexture(brush, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xBrushColor")]
	public static extern void BrushColor(int brush, int red, int green, int blue);

	[DllImport("xors3d.dll", EntryPoint = "xBrushAlpha")]
	public static extern void BrushAlpha(int brush, float alpha);

	[DllImport("xors3d.dll", EntryPoint = "xBrushShininess")]
	public static extern void BrushShininess(int brush, float shininess);

	[DllImport("xors3d.dll", EntryPoint = "xBrushBlend")]
	public static extern void BrushBlend(int brush, int blend);

	[DllImport("xors3d.dll", EntryPoint = "xBrushFX")]
	public static extern void BrushFX(int brush, int FX);

	[DllImport("xors3d.dll", EntryPoint = "xBrushTexture")]
	public static extern void BrushTexture(int brush, int texture, int frame, int index);

	public static void BrushTexture(int brush, int texture, int frame)
	{
		 BrushTexture(brush, texture, frame, 0);
	}
	public static void BrushTexture(int brush, int texture)
	{
		 BrushTexture(brush, texture, 0, 0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetBrushName")]
	public static extern IntPtr GetBrushName_(int brush);
	public static string GetBrushName(int brush)
	{
		return Marshal.PtrToStringAnsi(GetBrushName_(brush));
	}

	[DllImport("xors3d.dll", EntryPoint = "xBrushName")]
	public static extern void BrushName_(int brush, StringBuilder name);
	public static void BrushName(int brush, string name)
	{
		BrushName_(brush, new StringBuilder(name));
	}
	[DllImport("xors3d.dll", EntryPoint = "xGetBrushAlpha")]
	public static extern float GetBrushAlpha(int brush);

	[DllImport("xors3d.dll", EntryPoint = "xGetBrushBlend")]
	public static extern int GetBrushBlend(int brush);

	[DllImport("xors3d.dll", EntryPoint = "xGetBrushRed")]
	public static extern int GetBrushRed(int brush);

	[DllImport("xors3d.dll", EntryPoint = "xGetBrushGreen")]
	public static extern int GetBrushGreen(int brush);

	[DllImport("xors3d.dll", EntryPoint = "xGetBrushBlue")]
	public static extern int GetBrushBlue(int brush);

	[DllImport("xors3d.dll", EntryPoint = "xGetBrushFX")]
	public static extern int GetBrushFX(int brush);

	[DllImport("xors3d.dll", EntryPoint = "xGetBrushShininess")]
	public static extern float GetBrushShininess(int brush);


	// cameras commands
	[DllImport("xors3d.dll", EntryPoint = "xCameraFogMode")]
	public static extern void CameraFogMode(int camera, int mode);

	[DllImport("xors3d.dll", EntryPoint = "xCameraFogColor")]
	public static extern void CameraFogColor(int camera, int red, int green, int blue);

	[DllImport("xors3d.dll", EntryPoint = "xCameraFogRange")]
	public static extern void CameraFogRange(int camera, float nearRange, float farRange);

	[DllImport("xors3d.dll", EntryPoint = "xCameraClsColor")]
	public static extern void CameraClsColor(int camera, int red, int green, int blue, int alpha);

	public static void CameraClsColor(int camera, int red, int green, int blue)
	{
		 CameraClsColor(camera, red, green, blue, 255);
	}
	[DllImport("xors3d.dll", EntryPoint = "xCameraProjMode")]
	public static extern void CameraProjMode(int camera, int mode);

	[DllImport("xors3d.dll", EntryPoint = "xCameraClsMode")]
	public static extern void CameraClsMode(int camera, int clearColor, int clearZBuffer);

	[DllImport("xors3d.dll", EntryPoint = "xSphereInFrustum")]
	public static extern int SphereInFrustum(int camera, float x, float y, float z, float radii);

	[DllImport("xors3d.dll", EntryPoint = "xCameraClipPlane")]
	public static extern void CameraClipPlane(int camera, int index, bool enabled, float a, float b, float c, float d);

	[DllImport("xors3d.dll", EntryPoint = "xCameraRange")]
	public static extern void CameraRange(int camera, float nearRange, float farRange);

	[DllImport("xors3d.dll", EntryPoint = "xCameraViewport")]
	public static extern void CameraViewport(int camera, int x, int y, int width, int height);

	[DllImport("xors3d.dll", EntryPoint = "xCameraCropViewport")]
	public static extern void CameraCropViewport(int camera, int x, int y, int width, int height);

	[DllImport("xors3d.dll", EntryPoint = "xCreateCamera")]
	public static extern int CreateCamera(int parent);

	public static int CreateCamera()
	{
		return CreateCamera(0);
	}
	[DllImport("xors3d.dll", EntryPoint = "xCameraProject")]
	public static extern void CameraProject(int camera, float x, float y, float z);

	[DllImport("xors3d.dll", EntryPoint = "xCameraProject2D")]
	public static extern void CameraProject2D(int camera, int x, int y, float zDistance);

	[DllImport("xors3d.dll", EntryPoint = "xProjectedX")]
	public static extern float ProjectedX();

	[DllImport("xors3d.dll", EntryPoint = "xProjectedY")]
	public static extern float ProjectedY();

	[DllImport("xors3d.dll", EntryPoint = "xProjectedZ")]
	public static extern float ProjectedZ();

	[DllImport("xors3d.dll", EntryPoint = "xGetViewMatrix")]
	public static extern int GetViewMatrix(int camera);

	[DllImport("xors3d.dll", EntryPoint = "xGetProjectionMatrix")]
	public static extern int GetProjectionMatrix(int camera);

	[DllImport("xors3d.dll", EntryPoint = "xCameraZoom")]
	public static extern void CameraZoom(int camera, float zoom);

	[DllImport("xors3d.dll", EntryPoint = "xGetViewProjMatrix")]
	public static extern int GetViewProjMatrix(int camera);


	// collisions commands
	[DllImport("xors3d.dll", EntryPoint = "xCollisions")]
	public static extern void Collisions(int srcType, int destType, int collideMethod, int response);

	[DllImport("xors3d.dll", EntryPoint = "xClearCollisions")]
	public static extern void ClearCollisions();

	[DllImport("xors3d.dll", EntryPoint = "xResetEntity")]
	public static extern void ResetEntity(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xEntityRadius")]
	public static extern void EntityRadius(int entity, float xRadius, float yRadius);

	public static void EntityRadius(int entity, float xRadius)
	{
		 EntityRadius(entity, xRadius, 0.0f);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityBox")]
	public static extern void EntityBox(int entity, float x, float y, float z, float width, float height, float depth);

	[DllImport("xors3d.dll", EntryPoint = "xEntityType")]
	public static extern void EntityType(int entity, int typeID, bool recurse);

	public static void EntityType(int entity, int typeID)
	{
		 EntityType(entity, typeID, false);
	}
	[DllImport("xors3d.dll", EntryPoint = "xEntityCollided")]
	public static extern int EntityCollided(int entity, int typeID);

	[DllImport("xors3d.dll", EntryPoint = "xCountCollisions")]
	public static extern int CountCollisions(int entity);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionX")]
	public static extern float CollisionX(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionY")]
	public static extern float CollisionY(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionZ")]
	public static extern float CollisionZ(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionNX")]
	public static extern float CollisionNX(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionNY")]
	public static extern float CollisionNY(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionNZ")]
	public static extern float CollisionNZ(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionTime")]
	public static extern float CollisionTime(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionEntity")]
	public static extern int CollisionEntity(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionSurface")]
	public static extern int CollisionSurface(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xCollisionTriangle")]
	public static extern int CollisionTriangle(int entity, int index);

	[DllImport("xors3d.dll", EntryPoint = "xGetEntityType")]
	public static extern int GetEntityType(int entity);


	// constants commands
	[DllImport("xors3d.dll", EntryPoint = "xRenderPostEffect")]
	public static extern void RenderPostEffect(int poly);

	[DllImport("xors3d.dll", EntryPoint = "xCreatePostEffectPoly")]
	public static extern int CreatePostEffectPoly(int camera, int mode);

	[DllImport("xors3d.dll", EntryPoint = "xGetFunctionAddress")]
	public static extern int GetFunctionAddress_(StringBuilder name);
	public static int GetFunctionAddress(string name)
	{
		return GetFunctionAddress_(new StringBuilder(name));
	}

	// effects commands
	[DllImport("xors3d.dll", EntryPoint = "xLoadFXFile")]
	public static extern int LoadFXFile_(StringBuilder path);
	public static int LoadFXFile(string path)
	{
		return LoadFXFile_(new StringBuilder(path));
	}
	[DllImport("xors3d.dll", EntryPoint = "xFreeEffect")]
	public static extern void FreeEffect(int effect);

	[DllImport("xors3d.dll", EntryPoint = "xSetEntityEffect")]
	public static extern void SetEntityEffect(int entity, int effect, int index);
